test trên vanh1

--- a/test.html
+++ b/test.html
@@ -1,8 +1,9 @@
-<<<<<<< HEAD
+
 
 <p>hihi</p>
 <P>Hello xin chào</P>
 =======
 <p>Hello các bạn</p>
 <h1>Tìm hiểu về GIT</h1>
->>>>>>> vanh
+<h1>Test trên vanh 1</h1>
+
